# broker-buddy-mcp-server

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  developer-README.md  docker-compose.yml  pyproject.toml
SmartApi/: __init__.py  smartApiWebsocket.py  smartConnect.py  smartWebSocketOrderUpdate.py  smartWebSocketV2.py  webSocket.py
src/angelone_mcp/: __init__.py  server.py
src/angelone_mcp/tools/: __init__.py  external_tools.py  portfolio.py  portfolio_tools.py
src/configs/: __init__.py  angel_one_secrets.py
src/dtos/: auth_headers_dto.py  crypto_order_dto.py  order_params_dto.py
src/mcp_src/: __init__.py  server.py
src/mcp_src/tools/: __init__.py  angel_one_tools.py  coinbase_tools.py  external_tools.py
src/service/: __init__.py  angel_one_service.py  coinbase_service.py  secret_service.py
src/utils/: const.py
test/: test_portfolio_tools.py
